--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.1.1'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.1'
     compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.yanzhenjie:recyclerview-swipe:1.1.3'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     apt 'org.greenrobot:eventbus-annotation-processor:3.0.0'
@@ -60,5 +61,16 @@ dependencies {
 apt {
     arguments {
         eventBusIndex "com.whoislcj.eventbus.MyEventBusIndex"
+    }
+}
+configurations.all {
+
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '25.3.0'//默认使用的版本
+            }
+        }
     }
 }
