--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 repositories {
     flatDir {
@@ -54,6 +58,7 @@ dependencies {
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.1'
     compile 'com.bigkoo:convenientbanner:2.0.5'
     compile 'com.yanzhenjie:recyclerview-swipe:1.1.3'
+    compile 'com.zhy:base-rvadapter:3.0.3'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     apt 'org.greenrobot:eventbus-annotation-processor:3.0.0'
