--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.yanzhenjie:recyclerview-swipe:1.1.3'
     compile 'com.zhy:base-rvadapter:3.0.3'
     compile 'com.android.support:percent:26.0.1'
+    compile 'com.j256.ormlite:ormlite-android:5.0'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     apt 'org.greenrobot:eventbus-annotation-processor:3.0.0'
