--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,9 +60,6 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".activity.QueryActivity">
-
-        </activity>
         <activity
             android:name=".activity.TalentPoolActivity"
             android:label="@string/title_activity_talent_pool"
@@ -88,22 +85,33 @@
         <activity android:name=".activity.AccountSettingActivity" />
         <activity android:name=".activity.IndentityAuthenticationActivity" />
         <activity android:name=".activity.AptitudeQueryActivity" />
-        <activity android:name=".activity.PersonalSearchConditionActivity" />
+        <activity android:name=".activity.PersonalSearchConditionActivity" >
+
+        </activity>
         <activity android:name=".activity.CreditSituationActivity" />
         <activity android:name=".activity.HotSpotActivity" />
         <activity android:name=".activity.OrderReceiveAuthenticationActivity" />
         <activity android:name=".activity.JobResumeActivity" />
-        <activity android:name=".activity.FuzzySearchActivity"></activity>
+        <activity android:name=".activity.FuzzySearchActivity" />
         <activity android:name=".activity.EnterpriseDetailActivity" />
-        <activity android:name=".activity.AptitudeSelectActivity">
+        <activity
+            android:name=".activity.AptitudeSelectActivity"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".activity.QueryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--服务-->
+        <activity android:name=".activity.AptitudeRankSelectActivity" />
+        <activity android:name=".activity.EnterpriseAptitudeActivity" />
+        <activity android:name=".activity.EnterprisePerformanceSettingActivity" />
+        <activity android:name=".activity.ProvinceSelectActivity" />
+        <!-- 服务 -->
         <service android:name=".service.BackstageDownloadService" />
+
+        <activity android:name=".activity.PersonalSettingActivity"></activity>
     </application>
 
 </manifest>
